--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.12.8",
     "next": "13.2.4",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-tsparticles": "^2.9.3",
     "tailwindcss": "^3.2.7",
     "tsparticles": "^2.9.3",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.56.0",
