--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-lottie": "^1.2.3",
     "react-tsparticles": "^2.9.3",
     "tailwindcss": "^3.2.7",
     "tsparticles": "^2.9.3",
@@ -29,6 +30,7 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
+    "@types/react-lottie": "^1.2.6",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "eslint-config-prettier": "^8.8.0",
