--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.12.8",
     "next": "13.2.4",
     "postcss": "^8.4.21",
@@ -30,6 +31,7 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/react-lottie": "^1.2.6",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
