--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
@@ -22,13 +23,16 @@
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-lottie": "^1.2.3",
     "react-tsparticles": "^2.9.3",
     "tailwindcss": "^3.2.7",
     "tsparticles": "^2.9.3",
     "typescript": "5.0.2",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
