--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.12.8",
     "next": "13.2.4",
+    "nextjs-toploader": "^1.4.2",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
