--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "accept-language": "^3.0.18",
     "autoprefixer": "^10.4.14",
-    "clsx": "^1.2.1",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.12.8",
+    "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-resources-to-backend": "^1.1.3",
     "next": "13.2.4",
     "nextjs-toploader": "^1.4.2",
     "postcss": "^8.4.21",
@@ -26,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^12.2.2",
     "react-icons": "^4.8.0",
     "react-lottie": "^1.2.3",
     "react-tsparticles": "^2.9.3",
